--- a/tiles/test.html
+++ b/tiles/test.html
@@ -31,7 +31,7 @@
                     return null;
                 }
 
-                return ['http://localhost:8080/api1/tiles/',
+                return ['http://mtp-influenza.ddns.net:8080/api1/tiles/',
                     zoom, '/', coord.x, '/', coord.y, '.png'].join('');
             },
             tileSize: new google.maps.Size(256, 256)
