--- a/tiles/test.html
+++ b/tiles/test.html
@@ -22,7 +22,9 @@
     function initMap() {
         var map = new google.maps.Map(document.getElementById('map'), {
             zoom: 13,
-            center: {lat: 49.5, lng: 8.5}
+            center: {lat: 49.5, lng: 8.5},
+			maxZoom: 15,
+			minZoom: 8
         });
 
         var imageMapType = new google.maps.ImageMapType({
@@ -31,7 +33,7 @@
                     return null;
                 }
 
-                return ['http://localhost:8080/api1/tiles/',
+                return ['http://mtp-influenza.ddns.net:8080/api1/tiles/',
                     zoom, '/', coord.x, '/', coord.y, '.png'].join('');
             },
             tileSize: new google.maps.Size(256, 256)
