--- a/tiles/test.html
+++ b/tiles/test.html
@@ -19,6 +19,9 @@
 <div id="map"></div>
 <script>
 
+    function _(n) {
+        return n < 10 ? '0'+n : n;
+    }
     function initMap() {
         var map = new google.maps.Map(document.getElementById('map'), {
             zoom: 13,
@@ -29,12 +32,19 @@
 
         var imageMapType = new google.maps.ImageMapType({
             getTileUrl: function(coord, zoom) {
+                var d = new Date(),
+                        year = d.getFullYear(),
+                        month = _(d.getMonth()+1),
+                        day = _(d.getDate()),
+                        hour = d.getHours(),
+                        hour = _(hour - hour % 6);
+
                 if (zoom < 8 || zoom > 15) {
                     return null;
                 }
 
-                return ['http://mtp-influenza.ddns.net:8080/api1/tiles/',
-                    zoom, '/', coord.x, '/', coord.y, '.png'].join('');
+                return ['http://mtp-influenza.ddns.net:8080/api1/tiles',
+                    year,month,day,hour,zoom, coord.x, coord.y].join('/')+'.png';
             },
             tileSize: new google.maps.Size(256, 256)
         });
