--- a/tiles/test.html
+++ b/tiles/test.html
@@ -11,28 +11,53 @@
             padding: 0;
         }
         #map {
-            height: 100%;
+            height: 90%;
+        }
+        #control {
+            width:50%;
+            margin:auto;
         }
     </style>
 </head>
 <body>
 <div id="map"></div>
+<div id="control"><button id="prev"><<</button><span id="now"></span><button id="next">>></button></div>
 <script>
+    var validDate = new Date(),
+            prev = document.getElementById('prev'),
+            next = document.getElementById('next'),
+            now = document.getElementById('now'),
+            map = null;
 
+    prev.addEventListener('click',() => {
+        navigateFrame('PREV');
+    });
+    next.addEventListener('click',() => {
+        navigateFrame('NEXT');
+    });
+    navigateFrame('NOW');
+
+
+
+    function navigateFrame(where) {
+        var step = 6*3600*1000;
+        var t = validDate.getTime();
+        validDate = new Date(t - t % step);
+        if(where === 'NEXT') {
+            validDate = new Date(validDate.getTime()+step);
+        } else if(where === 'PREV') {
+            validDate = new Date(validDate.getTime()-step);
+        }
+        now.textContent = validDate.toLocaleString();
+        loadOverlay();
+    }
     function _(n) {
         return n < 10 ? '0'+n : n;
     }
-    function initMap() {
-        var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 13,
-            center: {lat: 49.5, lng: 8.5},
-			maxZoom: 15,
-			minZoom: 8
-        });
-
+    function loadOverlay() {
         var imageMapType = new google.maps.ImageMapType({
             getTileUrl: function(coord, zoom) {
-                var d = new Date(),
+                var d = validDate,
                         year = d.getFullYear(),
                         month = _(d.getMonth()+1),
                         day = _(d.getDate()),
@@ -44,12 +69,26 @@
                 }
 
                 return ['http://mtp-influenza.ddns.net:8080/api1/tiles',
-                    year,month,day,hour,zoom, coord.x, coord.y].join('/')+'.png';
+                            year,month,day,hour,zoom, coord.x, coord.y].join('/')+'.png';
             },
-            tileSize: new google.maps.Size(256, 256)
+            tileSize: new google.maps.Size(256, 256),
+            opacity:0.8,
+            name: "Influenza Heatmap"
         });
 
+        map.overlayMapTypes.clear();
         map.overlayMapTypes.push(imageMapType);
+    }
+    function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 13,
+            center: {lat: 49.5, lng: 8.5},
+			maxZoom: 15,
+			minZoom: 8
+        });
+
+        loadOverlay();
+
     }
 
 </script>
