Proxy to split up node application into sub processes. Logging changes.

--- a/www/visualize/index.html
+++ b/www/visualize/index.html
@@ -21,9 +21,9 @@
         Raven.config('https://038b0c8eafd44e08b61254bbcb8a1129@sentry.io/99802').install();
         //throw new Error('Hallo Welt JS');
     </script>
-    <title>Test</title>
+    <title>Test Visualize</title>
 </head>
 <body>
-Hallo Welt
+Hallo Welt Visualize
 </body>
 </html>
