Added heatmap to dashboard

--- a/www/visualize/index.html
+++ b/www/visualize/index.html
@@ -82,16 +82,16 @@
 
                 <div class="row">
                     <div class="col-lg-12">
-                        <div id="flot_timeline" style="height:500px"></div>
+                        <div id="flot_timeline" style="height:200px"></div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-10">
-                        <div id="map"></div>
+                    <div class="col-lg-12">
+                        <div id="map" style="height:500px;"></div>
                     </div>
-                    <div class="col-lg-2">
+                    <!--<div class="col-lg-2">
 
-                    </div>
+                    </div>-->
                 </div>
             </div>
             <!-- /.container-fluid -->
@@ -109,7 +109,11 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/plugins/flot/jquery.flot.js"></script>
     <script src="js/plugins/flot/jquery.flot.time.js"></script>
+
     <script src="js/influenza.js"></script>
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAn_1UqrgSqs8fKZOjilK7J4WcXzb74F14&signed_in=true&callback=initMap"></script>
+</body>
 </body>
 
 </html>
