--- a/www/visualize/index.html
+++ b/www/visualize/index.html
@@ -87,6 +87,24 @@
                         <div id="flot_timeline" style="height:200px"></div>
                     </div>
                 </div>
+                <div class="row row-centered">
+                    <div class="col-lg-12 col-centered">
+                        <h4>Heatmap-Bedienung</h4>
+                        <h5 id="current_time"></h5>
+                        <div id="history_controls" class="btn-group">
+                            <button type="button" class="btn btn-primary" onclick="_heatMap.previousStep();">-6 Hours</button>
+                            <button type="button" class="btn btn-primary" onclick="_heatMap.nextStep();">+6 Hours</button>
+                            <button type="button" class="btn btn-primary"  onclick="_heatMap.toNow();">Now</button>
+                            <button type="button" class="btn btn-primary">Play</button>
+                            <button type="button" class="btn btn-primary disabled">Pause</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="row row-centered">
+                    <div class="col-lg-12 col-centered">
+                        <h5 id="history_control_current"></h5>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-lg-12">
                         <div id="map" style="height:500px;"></div>
@@ -121,15 +139,22 @@
     <script src="js/influenza.heatmap.js"></script>
     <script src="js/influenza.graph.js"></script>
     <script type="text/javascript">
+        var _heatMap;
+
         function initMap() {
-            var i = new InfluenzaMap(document.getElementById('map'));
-            i.setCurrentDate(new Date("2016-11-17"));
+            _heatMap = new InfluenzaMap(document.getElementById('map'));
 
             var d = new InfluenzaDashboardGraph($('#flot_timeline'));
 
-            i.on('bounds_changed',(bounds) => {
+            _heatMap.on('bounds_changed',(bounds) => {
                 d.loadForBounds(bounds);
             });
+
+            _heatMap.on('time_changed',(time) => {
+                $('#current_time').html(time.toLocaleString());
+            });
+
+            _heatMap.reloadOverlay();
         }
 
     </script>
