Changed tile query

--- a/www/visualize/index.html
+++ b/www/visualize/index.html
@@ -154,6 +154,7 @@
                 $('#current_time').html(time.toLocaleString());
             });
 
+            _heatMap.setCurrentDate(new Date("2016-11-17"));
             _heatMap.reloadOverlay();
         }
 
