--- a/www/visualize/index.html
+++ b/www/visualize/index.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-datepicker3.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/sb-admin.css" rel="stylesheet">
@@ -88,9 +89,12 @@
                     </div>
                 </div>
                 <div class="row row-centered">
-                    <div class="col-lg-12 col-centered">
-                        <h4>Heatmap-Bedienung</h4>
-                        <h5 id="current_time"></h5>
+                    <div class="col-lg-3">
+                    </div>
+                    <div class="col-lg-2">
+                        <input type="text" class="form-control" id="current_time" value="">
+                    </div>
+                    <div class="col-lg-4">
                         <div id="history_controls" class="btn-group">
                             <button type="button" class="btn btn-primary" onclick="_heatMap.previousStep();">-6 Hours</button>
                             <button type="button" class="btn btn-primary" onclick="_heatMap.nextStep();">+6 Hours</button>
@@ -98,6 +102,8 @@
                             <button type="button" class="btn btn-primary" id="control_play" onclick="play();">Play</button>
                             <button type="button" class="btn btn-primary disabled" id="control_pause"  disabled onclick="pause();">Pause</button>
                         </div>
+                    </div>
+                    <div class="col-lg-3">
                     </div>
                 </div>
                 <div class="row row-centered">
@@ -127,6 +133,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap-datepicker.min.js"></script>
     <script src="js/plugins/flot/jquery.flot.js"></script>
     <script src="js/plugins/flot/jquery.flot.time.js"></script>
     <script src="js/plugins/flot/jquery.flot.barnumbers.js"></script>
@@ -142,6 +149,16 @@
         var _heatMap;
 
         function initMap() {
+            $('#current_time').datepicker({
+                autoclose:true,
+                endDate:"0d",
+                format:"dd.mm.yyyy",
+                orientation:"top",
+                forceParse:false
+            }).on('changeDate',(date) => {
+                _heatMap.setCurrentDate(date.date);
+            });
+
             _heatMap = new InfluenzaMap(document.getElementById('map'));
 
             var d = new InfluenzaDashboardGraph($('#flot_timeline'));
@@ -151,7 +168,8 @@
             });
 
             _heatMap.on('time_changed',(time) => {
-                $('#current_time').html(time.toLocaleString());
+                var t = time.toLocaleString();
+                $('#current_time').val(t);
             });
 
             _heatMap.setCurrentDate(new Date("2016-11-17"));
